# MiniCaffe

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  main.cpp  mc_test.cpp
minicaffe/: CMakeLists.txt  blob.cpp  blob.h  errors.cpp  errors.h  generator.h  layer.cpp  layer.h  minicaffe.h  net.cpp  net.cpp.obsoleted  net.h  net.h.obsoleted  normalization.cpp  normalization.h  normalizationLayer.cpp  normalization_gpu.cu  pooling.cpp  pooling.h  poolingLayer.cpp  pooling_gpu.cu  seqnet.cpp  seqnet.h  util.cpp  util.h
minicaffe/layers/: conv_layer.cpp  conv_layer.cu  conv_layer.h  fc_gpu.cu  fc_layer.cpp  fc_layer.h  input_layer.cpp  input_layer.h  mnist_generator.cpp  mnist_generator.h  relu_layer.cpp  relu_layer.cu  relu_layer.h  sigmoid.cpp  sigmoid.h  sigmoid_cross_entropy_loss.cpp  sigmoid_cross_entropy_loss.h
minicaffe/test/: CMakeLists.txt  blob_test.cpp  fc_test.cpp  layer_test.cpp  mnist_generator_test.cpp  net_test.cpp.obsoleted  normalization_test.cpp  pooling_test.cpp  seqnet_test.cpp  sigmoid_cross_entropy_loss_test.cpp  util_test.cpp
